--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -1,6 +1,6 @@
-TESTS = check_vdcos check_vdsin check_vdtan check_vdacos
+TESTS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdatan2
 
-check_PROGRAMS = check_vdcos check_vdsin check_vdtan check_vdacos
+check_PROGRAMS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdatan2
 INCLUDES = -I $(top_builddir)/include/
 
 check_vdcos_SOURCES = check_vdcos.c 
@@ -14,3 +14,6 @@ check_vdtan_LDADD = $(top_builddir)/src/libizy.la
 
 check_vdacos_SOURCES = check_vdacos.c 
 check_vdacos_LDADD = $(top_builddir)/src/libizy.la
+
+check_vdatan2_SOURCES = check_vdatan2.c 
+check_vdatan2_LDADD = $(top_builddir)/src/libizy.la
