atan2 test, asin test

--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -1,6 +1,6 @@
-TESTS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdatan2
+TESTS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdatan2 check_vdasin
 
-check_PROGRAMS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdatan2
+check_PROGRAMS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdatan2 check_vdasin
 INCLUDES = -I $(top_builddir)/include/
 
 check_vdcos_SOURCES = check_vdcos.c 
@@ -14,6 +14,9 @@ check_vdtan_LDADD = $(top_builddir)/src/libizy.la
 
 check_vdacos_SOURCES = check_vdacos.c 
 check_vdacos_LDADD = $(top_builddir)/src/libizy.la
+
+check_vdasin_SOURCES = check_vdasin.c 
+check_vdasin_LDADD = $(top_builddir)/src/libizy.la
 
 check_vdatan2_SOURCES = check_vdatan2.c 
 check_vdatan2_LDADD = $(top_builddir)/src/libizy.la
