--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -1,6 +1,6 @@
-TESTS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdatan2 check_vdasin
+TESTS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdasin check_vdatan check_vdatan2 
 
-check_PROGRAMS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdatan2 check_vdasin
+check_PROGRAMS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdasin check_vdatan check_vdatan2 
 INCLUDES = -I $(top_builddir)/include/
 
 check_vdcos_SOURCES = check_vdcos.c 
@@ -17,6 +17,9 @@ check_vdacos_LDADD = $(top_builddir)/src/libizy.la
 
 check_vdasin_SOURCES = check_vdasin.c 
 check_vdasin_LDADD = $(top_builddir)/src/libizy.la
+
+check_vdatan_SOURCES = check_vdatan.c 
+check_vdatan_LDADD = $(top_builddir)/src/libizy.la
 
 check_vdatan2_SOURCES = check_vdatan2.c 
 check_vdatan2_LDADD = $(top_builddir)/src/libizy.la
