Wired in sincos(), added check, memsetted results memory to 0x0 between runs

--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -1,6 +1,6 @@
-TESTS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdasin check_vdatan check_vdatan2 
+TESTS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdasin check_vdatan check_vdatan2 check_vdsincos
 
-check_PROGRAMS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdasin check_vdatan check_vdatan2 
+check_PROGRAMS = check_vdcos check_vdsin check_vdtan check_vdacos check_vdasin check_vdatan check_vdatan2  check_vdsincos
 INCLUDES = -I $(top_builddir)/include/
 
 check_vdcos_SOURCES = check_vdcos.c 
@@ -23,3 +23,6 @@ check_vdatan_LDADD = $(top_builddir)/src/libizy.la
 
 check_vdatan2_SOURCES = check_vdatan2.c 
 check_vdatan2_LDADD = $(top_builddir)/src/libizy.la
+
+check_vdsincos_SOURCES = check_vdsincos.c 
+check_vdsincos_LDADD = $(top_builddir)/src/libizy.la
