Added sub and subx checks

--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -1,6 +1,6 @@
 # TEST EXECS
 DEF_TRIG = check_vdcos check_vdsin check_vdtan check_vdacos check_vdasin check_vdatan check_vdatan2  check_vdsincos
-DEF_ARITH = check_vdadd check_vdaddx
+DEF_ARITH = check_vdadd check_vdaddx check_vdsub check_vdsubx
 
 TESTS=$(DEF_TRIG) $(DEF_ARITH)
 
@@ -41,4 +41,11 @@ check_vdadd_LDADD = $(top_builddir)/src/libizy.la
 
 check_vdaddx_SOURCES = check_vdaddx.c 
 check_vdaddx_LDADD = $(top_builddir)/src/libizy.la
+
+check_vdsub_SOURCES = check_vdsub.c 
+check_vdsub_LDADD = $(top_builddir)/src/libizy.la
+
+check_vdsubx_SOURCES = check_vdsubx.c 
+check_vdsubx_LDADD = $(top_builddir)/src/libizy.la
+
 
