Added pkginclude on headers

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,1 +1,4 @@
 SUBDIRS = src/
+AUTOGENHEADERS = include/izy.h include/izyreference.h include/izymathsmacros.h
+
+pkginclude_HEADERS = $(AUTOGENHEADERS)
