--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 SUBDIRS = src/
-AUTOGENHEADERS = include/izy.h include/izyreference.h include/izymathsmacros.h
+AUTOGENHEADERS = include/libizy/izy.h include/libizy/izymacros.h include/libizy/izyreference.h include/libizy/izymathsmacros.h
 
 pkginclude_HEADERS = $(AUTOGENHEADERS)
