updated build system to incorporate man pages

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = src/
+SUBDIRS = src/ man/
 AUTOGENHEADERS = include/libizy/izy.h include/libizy/izymacros.h include/libizy/izyreference.h include/libizy/izymathsmacros.h
 
 pkginclude_HEADERS = $(AUTOGENHEADERS)
