--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@ project (IZY)
 # actually cause another cmake executable to run. The same process will walk
 # through the project's entire directory structure.
 add_subdirectory (izy)
-#add_subdirectory (reference)
+add_subdirectory (reference)
 #add_subdirectory (test)
