--- a/izy/CMakeLists.txt
+++ b/izy/CMakeLists.txt
@@ -1,3 +1,4 @@
+include_directories (${IZY_SOURCE_DIR}/include)
 # Create a library called "IZY" which includes the source file "izy.c".
 # The extension is already found. Any number of sources could be listed here.
-add_library (IZY izy.c)
+add_library (izy izy.c)
