Get tests building.

--- a/izy/CMakeLists.txt
+++ b/izy/CMakeLists.txt
@@ -2,3 +2,4 @@ include_directories (${IZY_SOURCE_DIR}/include)
 # Create a library called "IZY" which includes the source file "izy.c".
 # The extension is already found. Any number of sources could be listed here.
 add_library (izy izy.c)
+target_link_libraries(izy m)
