--- a/izy/CMakeLists.txt
+++ b/izy/CMakeLists.txt
@@ -4,3 +4,4 @@ include_directories (${IZY_SOURCE_DIR}/include)
 add_library (izy SHARED izy.c)
 add_library (izy_static STATIC izy.c)
 target_link_libraries(izy m)
+set_target_properties(izy PROPERTIES SOVERSION ${IZY_VERSION_MAJOR} VERSION ${IZY_VERSION})
