Add make install target.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,5 @@ enable_testing()
 add_subdirectory (izy)
 add_subdirectory (reference)
 add_subdirectory (test)
+add_subdirectory (include)
+add_subdirectory (man)
