--- a/izy/CMakeLists.txt
+++ b/izy/CMakeLists.txt
@@ -5,3 +5,5 @@ add_library (izy SHARED izy.c)
 add_library (izy_static STATIC izy.c)
 target_link_libraries(izy m)
 set_target_properties(izy PROPERTIES SOVERSION ${IZY_VERSION_MAJOR} VERSION ${IZY_VERSION})
+install(TARGETS izy LIBRARY DESTINATION lib)
+install(TARGETS izy_static ARCHIVE DESTINATION lib)
