--- a/izy/CMakeLists.txt
+++ b/izy/CMakeLists.txt
@@ -3,7 +3,10 @@ include_directories (${IZY_SOURCE_DIR}/include)
 # The extension is already found. Any number of sources could be listed here.
 add_library (izy SHARED izy.c)
 add_library (izy_static STATIC izy.c)
-target_link_libraries(izy m)
+add_dependencies(izy izyreference)
+add_dependencies(izy_static izyreference_static)
+target_link_libraries(izy m izyreference)
+target_link_libraries(izy_static m izyreference_static)
 set_target_properties(izy PROPERTIES SOVERSION ${IZY_VERSION_MAJOR} VERSION ${IZY_VERSION})
-install(TARGETS izy LIBRARY DESTINATION lib)
-install(TARGETS izy_static ARCHIVE DESTINATION lib)
+install(TARGETS izy DESTINATION lib)
+install(TARGETS izy_static ARCHIVE DESTINATION lib DESTINATION lib)
