--- a/reference/CMakeLists.txt
+++ b/reference/CMakeLists.txt
@@ -6,5 +6,5 @@ add_library(izyreference SHARED ${REFSRC})
 add_library(izyreference_static STATIC ${REFSRC})
 target_link_libraries(izyreference m)
 set_target_properties(izyreference PROPERTIES SOVERSION ${IZY_VERSION_MAJOR} VERSION ${IZY_VERSION})
-install(TARGETS izyreference LIBRARY DESTINATION lib)
+install(TARGETS izyreference DESTINATION lib)
 install(TARGETS izyreference_static ARCHIVE DESTINATION lib)
