Run valgrind on all tests on Linux

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,4 +25,7 @@ foreach(TEST ${TESTS})
   add_executable(${TEST} ${TEST}.c)
   target_link_libraries(${TEST} izy izyreference)
   add_test(${TEST} ${TEST})
+  if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
+    add_test(${TEST}_memcheck valgrind --leak-check=full --error-exitcode=1 ./${TEST})
+  endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 endforeach()
