Build and test works out-of-box on Windows
The IZY DLLs have to be copied to the test folder so that the
Windows linker can find them (there is no other way to do this
short of installing them somewhere on the system path first).

Windows test suppression files are added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,11 @@ if(APPLE)
   configure_file(test/CTestCustom.apple CTestCustom.ctest)
 endif(APPLE)
 
+if(WIN32)
+  message(STATUS "Copying Windows test suppressions file.")
+  configure_file(test/CTestCustom.windows CTestCustom.ctest)
+endif(WIN32)
+
 # Recurse into the "izy", "reference", and "test" subdirectories. This does not
 # actually cause another cmake executable to run. The same process will walk
 # through the project's entire directory structure.
