--- a/izy/CMakeLists.txt
+++ b/izy/CMakeLists.txt
@@ -10,3 +10,12 @@ target_link_libraries(izy_static m izyreference_static)
 set_target_properties(izy PROPERTIES SOVERSION ${IZY_VERSION_MAJOR} VERSION ${IZY_VERSION})
 install(TARGETS izy DESTINATION lib)
 install(TARGETS izy_static ARCHIVE DESTINATION lib DESTINATION lib)
+
+if(WIN32)
+  # Copy DLL to test folder because otherwise Windows won't find
+  # it for the invocation of the tests.
+  add_custom_command(TARGET izy POST_BUILD
+                     COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                             ${CMAKE_BINARY_DIR}/izy/libizy.dll
+                             ${CMAKE_BINARY_DIR}/test/libizy.dll)
+endif(WIN32)
