--- a/reference/CMakeLists.txt
+++ b/reference/CMakeLists.txt
@@ -8,3 +8,12 @@ target_link_libraries(izyreference m)
 set_target_properties(izyreference PROPERTIES SOVERSION ${IZY_VERSION_MAJOR} VERSION ${IZY_VERSION})
 install(TARGETS izyreference DESTINATION lib)
 install(TARGETS izyreference_static ARCHIVE DESTINATION lib)
+
+if(WIN32)
+  # Copy DLL to test folder because otherwise Windows won't find
+  # it for the invocation of the tests.
+  add_custom_command(TARGET izy POST_BUILD
+                     COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                             ${CMAKE_BINARY_DIR}/izy/libizyreference.dll
+                             ${CMAKE_BINARY_DIR}/test/libizyreference.dll)
+endif(WIN32)
